--- a/kd_mf_nas.ipynb
+++ b/kd_mf_nas.ipynb
@@ -87,7 +87,7 @@
    "outputs": [],
    "source": [
     "import pickle\n",
-    "obj = pickle.load(open('dim4-WassersteinVAE_RBF-version_23-epoch-149_val_val.pkl', 'rb'))"
+    "obj = pickle.load(open('nasbench_val.pkl', 'rb'))"
    ]
   },
   {
