--- a/NB201-PrepareData.ipynb
+++ b/NB201-PrepareData.ipynb
@@ -33,7 +33,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = '/home/trofim/NAS-Bench-201-v1_1-096897.pth'\n",
+    "path = 'NAS-Bench-201-v1_1-096897.pth' # set a path to NAS-Bench-201 benchmark file\n",
     "\n",
     "from nas_201_api import NASBench201API as API\n",
     "# Create an API without the verbose log\n",
@@ -235,7 +235,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
