--- a/NB201-PrepareData.ipynb
+++ b/NB201-PrepareData.ipynb
@@ -2,34 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import sys\n",
-    "import random\n",
-    "import numpy as np\n",
-    "from tqdm import tqdm_notebook\n",
-    "from sklearn.gaussian_process import GaussianProcessRegressor as GPR\n",
-    "from sklearn.gaussian_process.kernels import RBF, WhiteKernel, ConstantKernel\n",
-    "from sklearn.ensemble import RandomForestRegressor\n",
-    "from scipy.stats import ttest_ind\n",
-    "from matplotlib import pyplot as plt"
+    "import pickle\n",
+    "import gzip"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from catboost import CatBoost, Pool"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,17 +27,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pickle\n",
-    "obj = pickle.load(open('nasbench_val.pkl', 'rb'))"
+    "obj = pickle.load(gzip.open(open('nasbench_val.pkl.gz', 'rb')))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -71,30 +56,46 @@
     "    # 200 iter\n",
     "    #\n",
     "    info = api.query_meta_info_by_index(index, hp = '200')  # This is an instance of `ArchResults`\n",
-    "    res_metrics = info.get_metrics('cifar10-valid', 'x-valid', 199) # This is a dict with metric names as keys\n",
+    "    \n",
+    "    res_metrics = info.get_metrics('cifar10-valid', 'x-valid', 199)\n",
+    "    #res_metrics = info.get_metrics('cifar100', 'x-valid', 199) \n",
+    "    #res_metrics = info.get_metrics('ImageNet16-120', 'x-valid', 199) \n",
     "    hf_val.append(res_metrics['accuracy'])\n",
-    "    res_metrics = info.get_metrics('cifar10', 'ori-test', 199) # This is a dict with metric names as keys\n",
+    "    \n",
+    "    res_metrics = info.get_metrics('cifar10', 'ori-test', 199) \n",
+    "    #res_metrics = info.get_metrics('cifar100', 'x-test', 199)\n",
+    "    #res_metrics = info.get_metrics('ImageNet16-120', 'x-test', 199) \n",
     "    hf_test.append(res_metrics['accuracy'])\n",
     "    \n",
-    "    res_metrics = info.get_metrics('cifar10-valid', 'train', 199) # This is a dict with metric names as keys\n",
+    "    res_metrics = info.get_metrics('cifar10-valid', 'train', 199)\n",
+    "    #res_metrics = info.get_metrics('cifar100', 'train', 199)\n",
+    "    #res_metrics = info.get_metrics('ImageNet16-120', 'train', 199)\n",
     "    hf_times.append(res_metrics['all_time'])\n",
     "    \n",
     "    #\n",
     "    # 12 iter\n",
     "    #\n",
     "    info = api.query_meta_info_by_index(index, hp = '12')  # This is an instance of `ArchResults`\n",
-    "    res_metrics = info.get_metrics('cifar10-valid', 'x-valid', 11) # This is a dict with metric names as keys\n",
+    "    res_metrics = info.get_metrics('cifar10-valid', 'x-valid', 11) \n",
+    "    #res_metrics = info.get_metrics('cifar100', 'x-valid', 11) \n",
+    "    #res_metrics = info.get_metrics('ImageNet16-120', 'x-valid', 11) \n",
     "    lf_val.append(res_metrics['accuracy'])\n",
-    "    res_metrics = info.get_metrics('cifar10', 'ori-test', 11) # This is a dict with metric names as keys\n",
+    "    \n",
+    "    res_metrics = info.get_metrics('cifar10', 'ori-test', 11)\n",
+    "    #res_metrics = info.get_metrics('cifar100', 'x-test', 11)\n",
+    "    #res_metrics = info.get_metrics('ImageNet16-120', 'x-test', 11) \n",
+    "    \n",
     "    lf_test.append(res_metrics['accuracy'])\n",
     "    \n",
-    "    res_metrics = info.get_metrics('cifar10-valid', 'train', 11) # This is a dict with metric names as keys\n",
+    "    res_metrics = info.get_metrics('cifar10-valid', 'train', 11) \n",
+    "    #res_metrics = info.get_metrics('cifar100', 'train', 11)\n",
+    "    #res_metrics = info.get_metrics('ImageNet16-120', 'train', 11)\n",
     "    lf_times.append(res_metrics['all_time'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,47 +109,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(91.60666665039064, 94.37333333333333)"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "max(hf_val), max(hf_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.30720000000000003"
-      ]
-     },
-     "execution_count": 81,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "len(list(filter(lambda x : x > 93.96, hf_test)))/len(hf_test)*100"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 391,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,66 +135,51 @@
     "\n",
     "for index in range(len(api)):    \n",
     "    info = api.query_meta_info_by_index(index, hp = '12')  # This is an instance of `ArchResults`\n",
-    "    res_metrics = info.get_metrics('cifar10-valid', 'x-valid', 0) # This is a dict with metric names as keys\n",
+    "    res_metrics = info.get_metrics('cifar10-valid', 'x-valid', 0)\n",
+    "    #res_metrics = info.get_metrics('cifar100', 'x-valid', 0)\n",
+    "    #res_metrics = info.get_metrics('ImageNet16-120', 'x-valid', 0)\n",
+    "    \n",
     "    lf_ep1_val.append(res_metrics['accuracy'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 392,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pickle.dump(lf_ep1_val, open('lf_ep1_val_c10.pickle', 'wb'))"
+    "pickle.dump(lf_ep1_val, open('lf_ep1_val_c10.pickle', 'wb'))\n",
+    "#pickle.dump(lf_ep1_val, open('lf_ep1_val_c100.pickle', 'wb'))\n",
+    "#pickle.dump(lf_ep1_val, open('lf_ep1_val_imagenet.pickle', 'wb'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 405,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[0.160959436666964, 0.23530634003795667, 0.6719242274764118]"
-      ]
-     },
-     "execution_count": 405,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "print_stat(lf_ep1_val, hf_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 406,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[0.4721006059101123, 0.6532957791513205, 0.46699173790688836]"
-      ]
-     },
-     "execution_count": 406,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "print_stat(lf_nst_ep1, hf_test) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pickle.dump((lf_val, lf_test, hf_val, hf_test), open('acc_nb201_c10.pickle', 'wb'))"
+    "pickle.dump((lf_val, lf_test, hf_val, hf_test), open('acc_nb201_c10.pickle', 'wb'))\n",
+    "#pickle.dump((lf_val, lf_test, hf_val, hf_test), open('acc_nb201_c100.pickle', 'wb'))\n",
+    "#pickle.dump((lf_val, lf_test, hf_val, hf_test), open('acc_nb201_imagenet.pickle', 'wb'))"
    ]
   }
  ],
@@ -224,18 +188,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.10"
   }
  },
  "nbformat": 4,
